chore(docs): updating docs for version v1.13.1

--- a/docs/gw-aws-audit.8
+++ b/docs/gw-aws-audit.8
@@ -383,9 +383,9 @@ USER [string]:
   \- The user name
 
 STATUS [enum]:
-  \- PASS: When a does NOT have Console Access and has NO Access Keys
+  \- PASS: When a does NOT have Console Access and has NO Access Keys or only INACTIVE Access Keys
   \- FAIL: When a User has Console Access
-  \- WARN: When a User does NOT have Console Acces, but does have at least 1 Access Key
+  \- WARN: When a User does NOT have Console Access, but does have at least 1 ACTIVE Access Key
   \- UNKNOWN: Catch all for cases not handled.
 
 AGE [duration]:
@@ -415,6 +415,9 @@ ACCESS KEY DETAILS [sub table]:
 
 .fi
 .RE
+
+.PP
+\fB\-\-show\-only\fP="": filter results to show only pass, warn or fail
 
 .SH cw
 .PP
