chore(docs): updating docs for version v1.16.0

--- a/docs/gw-aws-audit.8
+++ b/docs/gw-aws-audit.8
@@ -93,6 +93,12 @@ iam
 .IP \(bu 2
 user\-report, ur
 \[la]#user-report-ur\[ra]
+.IP \(bu 2
+permissions, p
+\[la]#permissions-p\[ra]
+.IP \(bu 2
+detach, p
+\[la]#detach-p\[ra]
 
 .RE
 
@@ -395,19 +401,8 @@ generates report of IAM Users and Access Key Usage
 This action will generate a report for all Users within an AWS account with the details
 specific user authentication methods.
 
-┌──────────────┬────────┬───────────┬─────────┬────────────┬─────────────────────────────────────────────────────────────────────────┐
-│              │        │           │         │            │                           ACCESS KEY DETAILS                            │
-│ USER         │ STATUS │       AGE │ CONSOLE │ LAST LOGIN │               KEY ID | STATUS | AGE | LAST USED | SERVICE               │
-├──────────────┼────────┼───────────┼─────────┼────────────┼─────────────────────────────────────────────────────────────────────────┤
-│ user12345    │   PASS │  123 days │      NO │       NONE │                               0 API Keys                                │
-├──────────────┼────────┼───────────┼─────────┼────────────┼─────────────────────────────────────────────────────────────────────────┤
-│ bot\-user\-123 │   WARN │  236 days │      NO │       NONE │                               2 API Keys                                │
-│              │        │           │         │            │ AKIAIOSFODNN6EXAMPLE │ Active │ 229 days │   229 days 22 hours   │ s3   │
-│              │        │           │         │            │ AKIAIOSFODNN5EXAMPLE │ Active │ 228 days │ 51 minutes 24 seconds │ sts  │
-├──────────────┼────────┼───────────┼─────────┼────────────┼─────────────────────────────────────────────────────────────────────────┤
-│ userAOK123   │   FAIL │   43 days │     YES │     5 days │                               1 API Key                                 │
-│              │        │           │         │            │   AKIAIOSFODNN3EXAMPLE │ Active │ 43 days │ 22 hours 5 minutes │ ec2    │
-└──────────────┴────────┴───────────┴─────────┴────────────┴─────────────────────────────────────────────────────────────────────────┘
+Interactive mode will allow you to search for a User and take actions once a User is
+selected.
 
 USER [string]:
   \- The user name
@@ -428,6 +423,10 @@ LAST LOGIN [duration]:
   \- Time since User was created
   \- NONE if the User does not have Console Access or if the User has NEVER logged in.
 
+PERMISSIONS [struct]:
+  \- G: n \-> Groups that the User belongs to
+  \- P: n \-> Policies that are attached to the User
+
 ACCESS KEY DETAILS [sub table]:
   \- Primary header row is the number of Access Keys associated with the User
 
@@ -447,7 +446,46 @@ ACCESS KEY DETAILS [sub table]:
 .RE
 
 .PP
+\fB\-\-interactive, \-i\fP: after generating the report, prompt for digging into a user
+
+.PP
 \fB\-\-show\-only\fP="": filter results to show only pass, warn or fail
+
+.SS permissions, p
+.PP
+view permissions that are associated with a User
+
+.PP
+.RS
+
+.nf
+Produces a table of Groups and Policies that are attached to a User.
+
+Interactive mode allows for you to detach a permission from a User.
+
+.fi
+.RE
+
+.PP
+\fB\-\-interactive, \-i\fP: interactive mode that allows for removal of permissions
+
+.PP
+\fB\-\-user, \-u\fP="": user name to look for
+
+.SS detach, p
+.PP
+detach an associated Group or Policy from a User
+
+.PP
+.RS
+
+.PP
+Generates a list of associated permissions for a User and allows you to select them to detach.
+
+.RE
+
+.PP
+\fB\-\-user, \-u\fP="": user name to look for
 
 .SH cw
 .PP
