chore(docs): updating docs for version v1.19.3

--- a/docs/gw-aws-audit.8
+++ b/docs/gw-aws-audit.8
@@ -458,6 +458,7 @@ LAST LOGIN [duration]:
 PERMISSIONS [struct]:
   \- G: n \-> Groups that the User belongs to
   \- P: n \-> Policies that are attached to the User
+  \- I: n \-> Inline Policies that are attached to the User
 
 ACCESS KEY DETAILS [sub table]:
   \- Primary header row is the number of Access Keys associated with the User
